# fab-agent

./: .gitignore  README.md  config.example.toml  pyproject.toml
catalogs/: components.toml  pipe.toml
src/fab_agent/: __init__.py  api.py  config.py  errors.py  ports.py
src/fab_agent/adapters/: __init__.py  cli.py
src/fab_agent/application/: __init__.py  pipeline.py  policy.py  registry.py  runner.py
src/fab_agent/domain/: __init__.py  design.py  dimensions.py  provenance.py  results.py  takeoff.py  validation.py
src/fab_agent/infrastructure/: __init__.py  catalogs.py  filesystem.py  images.py  models_factory.py  runtime.py  serialization.py
src/fab_agent/infrastructure/artifacts/: __init__.py  cad.py  diagrams.py  generate.py
src/fab_agent/models/: __init__.py  ollama.py  pipe_spool.py  schemas.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_config_serialization.py  test_dimensions.py  test_images_storage.py  test_live_ollama.py  test_ollama.py  test_pipe_spool_observation.py  test_pipeline_integration.py  test_policy.py  test_validation_takeoff.py
