[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fab-agent"
version = "0.1.0"
description = "A resumable, review-only agent for straight pipe-spool sketches"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "cadquery>=2.5,<3",
  "filelock>=3.16,<4",
  "httpx>=0.27,<1",
  "matplotlib>=3.9,<4",
  "pillow>=11,<12",
  "pydantic>=2.10,<3",
  "tomlkit>=0.13,<1",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
heic = ["pillow-heif>=0.22,<2"]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
fab-agent = "fab_agent.adapters.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fab_agent"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = ["live_ollama: requires credentials or a running configured Ollama endpoint"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"] # Typer's documented declaration style uses Option/Argument defaults.

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["fab_agent"]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["fab_agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
